test/LitTests/SemanticAnalysis/LifetimeMethods/ThrowingSetDead.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

exception TestError();

class TestClass() {
	// CHECK: .loci:9:2: error: lifetime method '::TestClass::__setdead' isn't marked 'noexcept'
	// CHECK: .loci:9:2: error: function '::TestClass::__setdead' is declared as 'noexcept' but can throw
	void __setdead() {
		throw TestError();
	}
}

// CHECK: 2 errors generated.
